fix: responsive question titles on mobile

--- a/src/components/QuestionTitle.module.css
+++ b/src/components/QuestionTitle.module.css
@@ -1,3 +1,9 @@
 .question {
   margin-bottom: 7rem;
 }
+
+@media only screen and (max-width: 500px) {
+  .question {
+    font-size: 5rem;
+  }
+}
